update login page and register information modal

--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -4,4 +4,10 @@
     ViewData["Title"] = "Confirm email";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center">
+            <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Go to Home Page</a>
+        </div>
+    </div>
+</div>
