--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,7 +13,6 @@
     <br />
     <br />
     <br />
-    <br />
     <div class="row">
         <div class="col-3"></div>
 
@@ -61,7 +60,7 @@
                         {
                             <div>
                                 <p>
-                                    There are no external authentication services configured at the moment.
+                                    
                                 </p>
                             </div>
                         }
@@ -103,15 +102,38 @@
                     }
                 </div>
                 <div class="form-group">
-                    <p>
-                        <a class="text-white" style="text-decoration: initial;" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a class="text-white" style="text-decoration: initial;" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a class="text-white" style="text-decoration: initial;" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
+                    <div class="row pb-3">
+                        <div class="col">
+                            <p>
+                                <a class="text-white" style="text-decoration: initial;" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                            </p>
+                            <p>
+                                <a class="text-white" style="text-decoration: initial;" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                            </p>
+                            <p>
+                                <a class="text-white" style="text-decoration: initial;" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                            </p>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-secondary btn-block" @*onclick="about()"*@ data-toggle="modal" data-target="#aboutModal" id="aboutButton">
+                                What is Bug Tracker?
+                            </button>
+                            <button type="button" class="btn btn-secondary btn-block" data-toggle="modal" data-target="#whatcanbugtrackerdoes">
+                                About My Bug Tracker
+                            </button>
+                            <button type="button" class="btn btn-secondary btn-block" data-toggle="modal" data-target="#howtouse">
+                                How to use?
+                            </button>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <button type="button" class="btn btn-secondary btn-block" data-toggle="modal" data-target="#contactme">
+                                How to Contact me?
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -219,7 +241,7 @@
         <div class="col"></div>
     </div>
 
-    <br /><br /><br /><br />
+   
 </div>
 
 
