--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,14 +41,10 @@
                         <h5 class="card-title">Quick Management Action</h5>
                     </div>
                     <div class="card-body">
-                        <a asp-controller="Tickets" asp-action="Create" class="btn btn-secondary"><i class="fas fa-plus-circle"></i> Create New Ticket</a>
-                        <a asp-controller="Projects" asp-action="Create" class="btn btn-secondary"> <i class="fas fa-tasks"></i> Create New Projects</a>
-
-                        <a asp-controller="Home" asp-action="ManageRole" class="btn btn-secondary"><i class="fas fa-people-arrows"></i> Role's Management </a>
-
-
-
-                        <a asp-controller="Projects" asp-action="ManagerUserProject" class="btn btn-secondary"><i class="fas fa-user-edit"></i> Project User Management</a>
+                        <a asp-controller="Tickets" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-circle"></i> Create New Ticket</a>
+                        <a asp-controller="Projects" asp-action="Create" class="btn btn-secondary pb-2 mb-2"> <i class="fas fa-tasks"></i> Create New Projects</a>
+                        <a asp-controller="Home" asp-action="ManageRole" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-people-arrows"></i> Role's Management </a>
+                        <a asp-controller="Projects" asp-action="ManagerUserProject" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-user-edit"></i> Project User Management</a>
                     </div>
                 </div>
             </div>
@@ -58,8 +54,8 @@
                         <h5 class="card-title">Quick Inbox Action</h5>
                     </div>
                     <div class="card-body">
-                        <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
-                        <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary"><i class="far fa-comments"></i> View My Inbox</a>
+                        <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
+                        <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-comments"></i> View My Inbox</a>
 
                     </div>
                 </div>
@@ -73,8 +69,8 @@
                         <h5 class="card-title">Quick Inbox Action</h5>
                     </div>
                     <div class="card-body">
-                        <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
-                        <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary"><i class="far fa-comments"></i> View My Inbox</a>
+                        <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
+                        <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-comments"></i> View My Inbox</a>
 
                     </div>
                 </div>
