--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -389,7 +389,7 @@
                                 <div class="modal-body">
                                     <div class="row pb-3">
                                         <div class="col">
-                                            My Bug Tracker has every funtions of a complete production which is ready to sell to customer.
+                                            My Bug Tracker has every funtions of a complete production which is ready to use or sell to customer.
 
                                         </div>
                                     </div>
