--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
     var number_of_high_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 2).ToList().Count;
     var number_of_medium_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 3).ToList().Count;
     var number_of_low_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 4).ToList().Count;
-    var number_unassign_ticket = ApplicationDbContext.Ticket.Where(t => t.DeveloperId == null).ToList().Count;
+    var number_unassign_ticket = ApplicationDbContext.Ticket.Where(t => t.IsAssigned == false).ToList().Count;
     var number_new_ticket = ApplicationDbContext.Ticket.Where(t => t.Created >= currentTime.AddDays(-7)).ToList().Count;
     var number_resolve_ticket = ApplicationDbContext.Ticket.Where(t => t.StatusId == 5).Where(t => t.Updated >= currentTime.AddDays(-7)).ToList().Count;
 }
