--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -23,26 +23,32 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="IsAssigned" /> @Html.DisplayNameFor(model => model.IsAssigned)
+                </label>
+            </div>
+
             <div class="form-group">
                 <label asp-for="DeveloperId" class="control-label"></label>
-                <select asp-for="DeveloperId" class ="form-control" asp-items="ViewBag.DeveloperId"></select>
+                <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
             </div>
 
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
+                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="StatusId" class="control-label"></label>
-                <select asp-for="StatusId" class ="form-control" asp-items="ViewBag.StatusId"></select>
+                <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PriorityId" class="control-label"></label>
-                <select asp-for="PriorityId" class ="form-control" asp-items="ViewBag.PriorityId"></select>
+                <select asp-for="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="TicketTypeId" class="control-label"></label>
-                <select asp-for="TicketTypeId" class ="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
