--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -25,7 +25,11 @@
             </div>
 
             <input type="hidden" asp-for="Created" class="form-control" />
-
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="IsAssigned" /> @Html.DisplayNameFor(model => model.IsAssigned)
+                </label>
+            </div>
 
             <div class="form-group">
                 <label asp-for="DeveloperId" class="control-label"></label>
@@ -33,7 +37,7 @@
                 <span asp-validation-for="DeveloperId" class="text-danger"></span>
             </div>
 
-            <input type="hidden" asp-for="OwnnerId" class="form-control"/>
+            <input type="hidden" asp-for="OwnnerId" class="form-control" />
 
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label"></label>
