--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -34,6 +34,9 @@
                 @Html.DisplayNameFor(model => model.Project)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.IsAssigned)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
@@ -68,6 +71,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Project.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsAssigned)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status.Name)
