--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -4,9 +4,58 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Project Add</h1>
+            </div>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
 
-<h4>Project</h4>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="col">
+            <form asp-controller="Projects" asp-action="Create" method="post">
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title">Create New Project</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label class="control-label">Project Name</label>
+                            <input name="Name" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Description</label>
+                            <textarea name="Description" class="form-control" rows="4"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Company</label>
+                            <select name="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Upload Image</label>
+                            <input type="file" name="image" />
+                        </div>
+
+                        <a asp-controller="Projects" asp-action="Index" class="btn btn-secondary">Cancel</a>
+                        <input type="submit" value="Create new Porject" class="btn btn-success float-left mr-2">
+
+                    </div>
+                    <!-- /.card-body -->
+                </div>
+                <!-- /.card -->
+            </form>
+        </div>
+    </div>
+   
+</section>
+<!-- /.content -->
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,23 +72,12 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class ="form-control" asp-items="ViewBag.CompanyId"></select>
+                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ImageData" class="control-label"></label>
-                <input asp-for="ImageData" class="form-control" />
-                <span asp-validation-for="ImageData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ContentType" class="control-label"></label>
-                <input asp-for="ContentType" class="form-control" />
-                <span asp-validation-for="ContentType" class="text-danger"></span>
+                <label class="control-label">Upload Image</label>
+                <input type="file" name="image" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
